# pdf-to-chapters

./: .env.example  .gitignore  README.md  pdf_to_chapters.py  pyproject.toml
pdf_to_chapters/: __init__.py  __main__.py  ai_utils.py  cli.py  pdf_utils.py  toc_utils.py  utils.py
